fixed form input overflow; reduced footer text size; removed line break

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h3 {
 
 h4,
 h5 {
-    font-size: 2.6rem;
+    font-size: 2.2rem;
 }
 
 a {
@@ -255,7 +255,8 @@ nav ul {
 }
 
 .form-wrapper input {
-    padding: 1rem;
+    padding: 1rem 0;
+    max-width: 80%;
 }
 
 
@@ -309,7 +310,7 @@ footer ul li {
 }
 
 @media screen and (max-width: 700px) {
-    .benefits br {
+    .benefits-head br {
         display: none;
     }
 }
